parser.output
Grammar

    0 $accept: stmts $end

    1 stmts: stmts stmt
    2      | stmt

    3 stmt: expr SEMICOLON

    4 $@1: /* empty */

    5 stmt: LBRACE $@1 stmts RBRACE
    6     | const_dec_stmt
    7     | var_dec_stmt
    8     | assign_stmt
    9     | while_stmt
   10     | if_stmt
   11     | repeat_until_stmt
   12     | for_stmt
   13     | switch_stmt
   14     | function
   15     | RETURN ret_val SEMICOLON
   16     | BREAK SEMICOLON
   17     | CONTINUE SEMICOLON
   18     | PRINT LPAREN value RPAREN SEMICOLON

   19 ret_val: value
   20        | /* empty */

   21 value: expr
   22      | STRING_VAL
   23      | CHAR_VAL

   24 expr: bool_expr
   25     | arithmetic_expr

   26 bool_expr: expr EQUAL arithmetic_expr
   27          | expr NE arithmetic_expr
   28          | expr GREATER arithmetic_expr
   29          | expr LESS arithmetic_expr
   30          | expr GE arithmetic_expr
   31          | expr LE arithmetic_expr
   32          | expr AND expr
   33          | expr OR expr
   34          | NOT expr
   35          | LPAREN bool_expr RPAREN
   36          | TRUE_VAL
   37          | FALSE_VAL

   38 arithmetic_expr: binary_expr
   39                | unary_expr

   40 unary_expr: IDENTIFIER INC
   41           | IDENTIFIER DEC

   42 binary_expr: term
   43            | binary_expr PLUS term
   44            | binary_expr MINUS term

   45 term: negat
   46     | term MULT factor
   47     | term DIV factor
   48     | term MOD factor

   49 negat: para
   50      | MINUS para

   51 para: factor
   52     | LPAREN binary_expr RPAREN

   53 factor: INT_VAL
   54       | FLOAT_VAL
   55       | factor EXP factor
   56       | function_call
   57       | IDENTIFIER

   58 function_call: IDENTIFIER LPAREN RPAREN

   59 $@2: /* empty */

   60 function_call: IDENTIFIER LPAREN $@2 call_params RPAREN

   61 call_params: call_params COMMA value
   62            | value

   63 constant: INT_VAL
   64         | FLOAT_VAL
   65         | STRING_VAL
   66         | CHAR_VAL
   67         | TRUE_VAL
   68         | FALSE_VAL

   69 const_dec_stmt: CONST type IDENTIFIER ASSIGN constant SEMICOLON

   70 var_dec_stmt: type IDENTIFIER SEMICOLON
   71             | type IDENTIFIER ASSIGN value SEMICOLON

   72 assign_stmt: IDENTIFIER ASSIGN value SEMICOLON
   73            | IDENTIFIER DIV_EQ value SEMICOLON
   74            | IDENTIFIER MULT_EQ value SEMICOLON
   75            | IDENTIFIER PLUS_EQ value SEMICOLON
   76            | IDENTIFIER MINUS_EQ value SEMICOLON

   77 $@3: /* empty */

   78 $@4: /* empty */

   79 while_stmt: WHILE LPAREN expr $@3 RPAREN LBRACE $@4 stmts RBRACE

   80 $@5: /* empty */

   81 $@6: /* empty */

   82 $@7: /* empty */

   83 if_stmt: IF LPAREN expr $@5 RPAREN LBRACE $@6 stmts RBRACE $@7 if_expression_stmt

   84 $@8: /* empty */

   85 if_expression_stmt: ELSE LBRACE $@8 stmts RBRACE
   86                   | /* empty */

   87 $@9: /* empty */

   88 $@10: /* empty */

   89 $@11: /* empty */

   90 repeat_until_stmt: REPEAT LBRACE $@9 stmts RBRACE $@10 UNTIL LPAREN expr $@11 RPAREN SEMICOLON

   91 $@12: /* empty */

   92 for_stmt: FOR $@12 for_expression_stmt

   93 $@13: /* empty */

   94 for_expression_stmt: LPAREN var_dec_stmt expr $@13 SEMICOLON expr RPAREN LBRACE stmts RBRACE

   95 $@14: /* empty */

   96 for_expression_stmt: LPAREN assign_stmt expr $@14 SEMICOLON expr RPAREN LBRACE stmts RBRACE

   97 $@15: /* empty */

   98 switch_stmt: SWITCH LPAREN expr RPAREN LBRACE $@15 case_stmts RBRACE

   99 case_stmts: case_stmts case_stmt
  100           | case_stmt

  101 case_stmt: CASE value COLON stmts
  102          | DEFAULT COLON stmts

  103 type: INT
  104     | FLOAT
  105     | CHAR
  106     | STRING
  107     | BOOL

  108 function: function_prototype LBRACE stmts RBRACE

  109 $@16: /* empty */

  110 function_prototype: VOID IDENTIFIER LPAREN $@16 params RPAREN

  111 $@17: /* empty */

  112 function_prototype: VOID IDENTIFIER LPAREN $@17 RPAREN

  113 $@18: /* empty */

  114 function_prototype: type IDENTIFIER LPAREN $@18 params RPAREN

  115 $@19: /* empty */

  116 function_prototype: type IDENTIFIER LPAREN $@19 RPAREN

  117 params: param
  118       | params COMMA param

  119 param: type IDENTIFIER
  120      | type IDENTIFIER ASSIGN constant


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 103
FLOAT (259) 104
CHAR (260) 105
BOOL (261) 107
STRING (262) 106
IDENTIFIER (263) 40 41 57 58 60 69 70 71 72 73 74 75 76 110 112 114
    116 119 120
INT_VAL (264) 53 63
FLOAT_VAL (265) 54 64
CHAR_VAL (266) 23 66
STRING_VAL (267) 22 65
TRUE_VAL (268) 36 67
FALSE_VAL (269) 37 68
CONST (270) 69
SEMICOLON (271) 3 15 16 17 18 69 70 71 72 73 74 75 76 90 94 96
COMMA (272) 61 118
LBRACE (273) 5 79 83 85 90 94 96 98 108
RBRACE (274) 5 79 83 85 90 94 96 98 108
LPAREN (275) 18 35 52 58 60 79 83 90 94 96 98 110 112 114 116
RPAREN (276) 18 35 52 58 60 79 83 90 94 96 98 110 112 114 116
BREAK (277) 16
CONTINUE (278) 17
WHILE (279) 79
FOR (280) 92
SWITCH (281) 98
CASE (282) 101
DEFAULT (283) 102
COLON (284) 101 102
IF (285) 83
ELSE (286) 85
REPEAT (287) 90
UNTIL (288) 90
LE (289) 31
GE (290) 30
NE (291) 27
EQUAL (292) 26
LESS (293) 29
GREATER (294) 28
MINUS (295) 44 50
PLUS (296) 43
MOD (297) 48
DIV (298) 47
MULT (299) 46
EXP (300) 55
OR (301) 33
AND (302) 32
NOT (303) 34
ASSIGN (304) 69 71 72 120
DIV_EQ (305) 73
PLUS_EQ (306) 75
MINUS_EQ (307) 76
MULT_EQ (308) 74
INC (309) 40
DEC (310) 41
UMINUS (311)
VOID (312) 110 112
RETURN (313) 15
PRINT (314) 18


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
stmts (61)
    on left: 1 2, on right: 0 1 5 79 83 85 90 94 96 101 102 108
stmt (62)
    on left: 3 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 1 2
$@1 (63)
    on left: 4, on right: 5
ret_val (64)
    on left: 19 20, on right: 15
value (65)
    on left: 21 22 23, on right: 18 19 61 62 71 72 73 74 75 76 101
expr (66)
    on left: 24 25, on right: 3 21 26 27 28 29 30 31 32 33 34 79 83
    90 94 96 98
bool_expr (67)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37, on right: 24 35
arithmetic_expr (68)
    on left: 38 39, on right: 25 26 27 28 29 30 31
unary_expr (69)
    on left: 40 41, on right: 39
binary_expr (70)
    on left: 42 43 44, on right: 38 43 44 52
term (71)
    on left: 45 46 47 48, on right: 42 43 44 46 47 48
negat (72)
    on left: 49 50, on right: 45
para (73)
    on left: 51 52, on right: 49 50
factor (74)
    on left: 53 54 55 56 57, on right: 46 47 48 51 55
function_call (75)
    on left: 58 60, on right: 56
$@2 (76)
    on left: 59, on right: 60
call_params (77)
    on left: 61 62, on right: 60 61
constant (78)
    on left: 63 64 65 66 67 68, on right: 69 120
const_dec_stmt (79)
    on left: 69, on right: 6
var_dec_stmt (80)
    on left: 70 71, on right: 7 94
assign_stmt (81)
    on left: 72 73 74 75 76, on right: 8 96
while_stmt (82)
    on left: 79, on right: 9
$@3 (83)
    on left: 77, on right: 79
$@4 (84)
    on left: 78, on right: 79
if_stmt (85)
    on left: 83, on right: 10
$@5 (86)
    on left: 80, on right: 83
$@6 (87)
    on left: 81, on right: 83
$@7 (88)
    on left: 82, on right: 83
if_expression_stmt (89)
    on left: 85 86, on right: 83
$@8 (90)
    on left: 84, on right: 85
repeat_until_stmt (91)
    on left: 90, on right: 11
$@9 (92)
    on left: 87, on right: 90
$@10 (93)
    on left: 88, on right: 90
$@11 (94)
    on left: 89, on right: 90
for_stmt (95)
    on left: 92, on right: 12
$@12 (96)
    on left: 91, on right: 92
for_expression_stmt (97)
    on left: 94 96, on right: 92
$@13 (98)
    on left: 93, on right: 94
$@14 (99)
    on left: 95, on right: 96
switch_stmt (100)
    on left: 98, on right: 13
$@15 (101)
    on left: 97, on right: 98
case_stmts (102)
    on left: 99 100, on right: 98 99
case_stmt (103)
    on left: 101 102, on right: 99 100
type (104)
    on left: 103 104 105 106 107, on right: 69 70 71 114 116 119 120
function (105)
    on left: 108, on right: 14
function_prototype (106)
    on left: 110 112 114 116, on right: 108
$@16 (107)
    on left: 109, on right: 110
$@17 (108)
    on left: 111, on right: 112
$@18 (109)
    on left: 113, on right: 114
$@19 (110)
    on left: 115, on right: 116
params (111)
    on left: 117 118, on right: 110 114 118
param (112)
    on left: 119 120, on right: 117 118


state 0

    0 $accept: . stmts $end

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    CONST       shift, and go to state 11
    LBRACE      shift, and go to state 12
    LPAREN      shift, and go to state 13
    BREAK       shift, and go to state 14
    CONTINUE    shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    SWITCH      shift, and go to state 18
    IF          shift, and go to state 19
    REPEAT      shift, and go to state 20
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22
    VOID        shift, and go to state 23
    RETURN      shift, and go to state 24
    PRINT       shift, and go to state 25

    stmts               go to state 26
    stmt                go to state 27
    expr                go to state 28
    bool_expr           go to state 29
    arithmetic_expr     go to state 30
    unary_expr          go to state 31
    binary_expr         go to state 32
    term                go to state 33
    negat               go to state 34
    para                go to state 35
    factor              go to state 36
    function_call       go to state 37
    const_dec_stmt      go to state 38
    var_dec_stmt        go to state 39
    assign_stmt         go to state 40
    while_stmt          go to state 41
    if_stmt             go to state 42
    repeat_until_stmt   go to state 43
    for_stmt            go to state 44
    switch_stmt         go to state 45
    type                go to state 46
    function            go to state 47
    function_prototype  go to state 48


state 1

  103 type: INT .

    $default  reduce using rule 103 (type)


state 2

  104 type: FLOAT .

    $default  reduce using rule 104 (type)


state 3

  105 type: CHAR .

    $default  reduce using rule 105 (type)


state 4

  107 type: BOOL .

    $default  reduce using rule 107 (type)


state 5

  106 type: STRING .

    $default  reduce using rule 106 (type)


state 6

   40 unary_expr: IDENTIFIER . INC
   41           | IDENTIFIER . DEC
   57 factor: IDENTIFIER .
   58 function_call: IDENTIFIER . LPAREN RPAREN
   60              | IDENTIFIER . LPAREN $@2 call_params RPAREN
   72 assign_stmt: IDENTIFIER . ASSIGN value SEMICOLON
   73            | IDENTIFIER . DIV_EQ value SEMICOLON
   74            | IDENTIFIER . MULT_EQ value SEMICOLON
   75            | IDENTIFIER . PLUS_EQ value SEMICOLON
   76            | IDENTIFIER . MINUS_EQ value SEMICOLON

    LPAREN    shift, and go to state 49
    ASSIGN    shift, and go to state 50
    DIV_EQ    shift, and go to state 51
    PLUS_EQ   shift, and go to state 52
    MINUS_EQ  shift, and go to state 53
    MULT_EQ   shift, and go to state 54
    INC       shift, and go to state 55
    DEC       shift, and go to state 56

    $default  reduce using rule 57 (factor)


state 7

   53 factor: INT_VAL .

    $default  reduce using rule 53 (factor)


state 8

   54 factor: FLOAT_VAL .

    $default  reduce using rule 54 (factor)


state 9

   36 bool_expr: TRUE_VAL .

    $default  reduce using rule 36 (bool_expr)


state 10

   37 bool_expr: FALSE_VAL .

    $default  reduce using rule 37 (bool_expr)


state 11

   69 const_dec_stmt: CONST . type IDENTIFIER ASSIGN constant SEMICOLON

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    CHAR    shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5

    type  go to state 57


state 12

    5 stmt: LBRACE . $@1 stmts RBRACE

    $default  reduce using rule 4 ($@1)

    $@1  go to state 58


state 13

   35 bool_expr: LPAREN . bool_expr RPAREN
   52 para: LPAREN . binary_expr RPAREN

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    expr             go to state 60
    bool_expr        go to state 61
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 62
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 14

   16 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 63


state 15

   17 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 64


state 16

   79 while_stmt: WHILE . LPAREN expr $@3 RPAREN LBRACE $@4 stmts RBRACE

    LPAREN  shift, and go to state 65


state 17

   92 for_stmt: FOR . $@12 for_expression_stmt

    $default  reduce using rule 91 ($@12)

    $@12  go to state 66


state 18

   98 switch_stmt: SWITCH . LPAREN expr RPAREN LBRACE $@15 case_stmts RBRACE

    LPAREN  shift, and go to state 67


state 19

   83 if_stmt: IF . LPAREN expr $@5 RPAREN LBRACE $@6 stmts RBRACE $@7 if_expression_stmt

    LPAREN  shift, and go to state 68


state 20

   90 repeat_until_stmt: REPEAT . LBRACE $@9 stmts RBRACE $@10 UNTIL LPAREN expr $@11 RPAREN SEMICOLON

    LBRACE  shift, and go to state 69


state 21

   50 negat: MINUS . para

    IDENTIFIER  shift, and go to state 70
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    LPAREN      shift, and go to state 71

    para           go to state 72
    factor         go to state 36
    function_call  go to state 37


state 22

   34 bool_expr: NOT . expr

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    expr             go to state 73
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 23

  110 function_prototype: VOID . IDENTIFIER LPAREN $@16 params RPAREN
  112                   | VOID . IDENTIFIER LPAREN $@17 RPAREN

    IDENTIFIER  shift, and go to state 74


state 24

   15 stmt: RETURN . ret_val SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    $default  reduce using rule 20 (ret_val)

    ret_val          go to state 77
    value            go to state 78
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 25

   18 stmt: PRINT . LPAREN value RPAREN SEMICOLON

    LPAREN  shift, and go to state 80


state 26

    0 $accept: stmts . $end
    1 stmts: stmts . stmt

    $end        shift, and go to state 81
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    CONST       shift, and go to state 11
    LBRACE      shift, and go to state 12
    LPAREN      shift, and go to state 13
    BREAK       shift, and go to state 14
    CONTINUE    shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    SWITCH      shift, and go to state 18
    IF          shift, and go to state 19
    REPEAT      shift, and go to state 20
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22
    VOID        shift, and go to state 23
    RETURN      shift, and go to state 24
    PRINT       shift, and go to state 25

    stmt                go to state 82
    expr                go to state 28
    bool_expr           go to state 29
    arithmetic_expr     go to state 30
    unary_expr          go to state 31
    binary_expr         go to state 32
    term                go to state 33
    negat               go to state 34
    para                go to state 35
    factor              go to state 36
    function_call       go to state 37
    const_dec_stmt      go to state 38
    var_dec_stmt        go to state 39
    assign_stmt         go to state 40
    while_stmt          go to state 41
    if_stmt             go to state 42
    repeat_until_stmt   go to state 43
    for_stmt            go to state 44
    switch_stmt         go to state 45
    type                go to state 46
    function            go to state 47
    function_prototype  go to state 48


state 27

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


state 28

    3 stmt: expr . SEMICOLON
   26 bool_expr: expr . EQUAL arithmetic_expr
   27          | expr . NE arithmetic_expr
   28          | expr . GREATER arithmetic_expr
   29          | expr . LESS arithmetic_expr
   30          | expr . GE arithmetic_expr
   31          | expr . LE arithmetic_expr
   32          | expr . AND expr
   33          | expr . OR expr

    SEMICOLON  shift, and go to state 83
    LE         shift, and go to state 84
    GE         shift, and go to state 85
    NE         shift, and go to state 86
    EQUAL      shift, and go to state 87
    LESS       shift, and go to state 88
    GREATER    shift, and go to state 89
    OR         shift, and go to state 90
    AND        shift, and go to state 91


state 29

   24 expr: bool_expr .

    $default  reduce using rule 24 (expr)


state 30

   25 expr: arithmetic_expr .

    $default  reduce using rule 25 (expr)


state 31

   39 arithmetic_expr: unary_expr .

    $default  reduce using rule 39 (arithmetic_expr)


state 32

   38 arithmetic_expr: binary_expr .
   43 binary_expr: binary_expr . PLUS term
   44            | binary_expr . MINUS term

    MINUS  shift, and go to state 92
    PLUS   shift, and go to state 93

    $default  reduce using rule 38 (arithmetic_expr)


state 33

   42 binary_expr: term .
   46 term: term . MULT factor
   47     | term . DIV factor
   48     | term . MOD factor

    MOD   shift, and go to state 94
    DIV   shift, and go to state 95
    MULT  shift, and go to state 96

    $default  reduce using rule 42 (binary_expr)


state 34

   45 term: negat .

    $default  reduce using rule 45 (term)


state 35

   49 negat: para .

    $default  reduce using rule 49 (negat)


state 36

   51 para: factor .
   55 factor: factor . EXP factor

    EXP  shift, and go to state 97

    $default  reduce using rule 51 (para)


state 37

   56 factor: function_call .

    $default  reduce using rule 56 (factor)


state 38

    6 stmt: const_dec_stmt .

    $default  reduce using rule 6 (stmt)


state 39

    7 stmt: var_dec_stmt .

    $default  reduce using rule 7 (stmt)


state 40

    8 stmt: assign_stmt .

    $default  reduce using rule 8 (stmt)


state 41

    9 stmt: while_stmt .

    $default  reduce using rule 9 (stmt)


state 42

   10 stmt: if_stmt .

    $default  reduce using rule 10 (stmt)


state 43

   11 stmt: repeat_until_stmt .

    $default  reduce using rule 11 (stmt)


state 44

   12 stmt: for_stmt .

    $default  reduce using rule 12 (stmt)


state 45

   13 stmt: switch_stmt .

    $default  reduce using rule 13 (stmt)


state 46

   70 var_dec_stmt: type . IDENTIFIER SEMICOLON
   71             | type . IDENTIFIER ASSIGN value SEMICOLON
  114 function_prototype: type . IDENTIFIER LPAREN $@18 params RPAREN
  116                   | type . IDENTIFIER LPAREN $@19 RPAREN

    IDENTIFIER  shift, and go to state 98


state 47

   14 stmt: function .

    $default  reduce using rule 14 (stmt)


state 48

  108 function: function_prototype . LBRACE stmts RBRACE

    LBRACE  shift, and go to state 99


state 49

   58 function_call: IDENTIFIER LPAREN . RPAREN
   60              | IDENTIFIER LPAREN . $@2 call_params RPAREN

    RPAREN  shift, and go to state 100

    $default  reduce using rule 59 ($@2)

    $@2  go to state 101


state 50

   72 assign_stmt: IDENTIFIER ASSIGN . value SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    value            go to state 102
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 51

   73 assign_stmt: IDENTIFIER DIV_EQ . value SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    value            go to state 103
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 52

   75 assign_stmt: IDENTIFIER PLUS_EQ . value SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    value            go to state 104
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 53

   76 assign_stmt: IDENTIFIER MINUS_EQ . value SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    value            go to state 105
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 54

   74 assign_stmt: IDENTIFIER MULT_EQ . value SEMICOLON

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    CHAR_VAL    shift, and go to state 75
    STRING_VAL  shift, and go to state 76
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    value            go to state 106
    expr             go to state 79
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 55

   40 unary_expr: IDENTIFIER INC .

    $default  reduce using rule 40 (unary_expr)


state 56

   41 unary_expr: IDENTIFIER DEC .

    $default  reduce using rule 41 (unary_expr)


state 57

   69 const_dec_stmt: CONST type . IDENTIFIER ASSIGN constant SEMICOLON

    IDENTIFIER  shift, and go to state 107


state 58

    5 stmt: LBRACE $@1 . stmts RBRACE

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    IDENTIFIER  shift, and go to state 6
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    CONST       shift, and go to state 11
    LBRACE      shift, and go to state 12
    LPAREN      shift, and go to state 13
    BREAK       shift, and go to state 14
    CONTINUE    shift, and go to state 15
    WHILE       shift, and go to state 16
    FOR         shift, and go to state 17
    SWITCH      shift, and go to state 18
    IF          shift, and go to state 19
    REPEAT      shift, and go to state 20
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22
    VOID        shift, and go to state 23
    RETURN      shift, and go to state 24
    PRINT       shift, and go to state 25

    stmts               go to state 108
    stmt                go to state 27
    expr                go to state 28
    bool_expr           go to state 29
    arithmetic_expr     go to state 30
    unary_expr          go to state 31
    binary_expr         go to state 32
    term                go to state 33
    negat               go to state 34
    para                go to state 35
    factor              go to state 36
    function_call       go to state 37
    const_dec_stmt      go to state 38
    var_dec_stmt        go to state 39
    assign_stmt         go to state 40
    while_stmt          go to state 41
    if_stmt             go to state 42
    repeat_until_stmt   go to state 43
    for_stmt            go to state 44
    switch_stmt         go to state 45
    type                go to state 46
    function            go to state 47
    function_prototype  go to state 48


state 59

   40 unary_expr: IDENTIFIER . INC
   41           | IDENTIFIER . DEC
   57 factor: IDENTIFIER .
   58 function_call: IDENTIFIER . LPAREN RPAREN
   60              | IDENTIFIER . LPAREN $@2 call_params RPAREN

    LPAREN  shift, and go to state 49
    INC     shift, and go to state 55
    DEC     shift, and go to state 56

    $default  reduce using rule 57 (factor)


state 60

   26 bool_expr: expr . EQUAL arithmetic_expr
   27          | expr . NE arithmetic_expr
   28          | expr . GREATER arithmetic_expr
   29          | expr . LESS arithmetic_expr
   30          | expr . GE arithmetic_expr
   31          | expr . LE arithmetic_expr
   32          | expr . AND expr
   33          | expr . OR expr

    LE       shift, and go to state 84
    GE       shift, and go to state 85
    NE       shift, and go to state 86
    EQUAL    shift, and go to state 87
    LESS     shift, and go to state 88
    GREATER  shift, and go to state 89
    OR       shift, and go to state 90
    AND      shift, and go to state 91


state 61

   24 expr: bool_expr .
   35 bool_expr: LPAREN bool_expr . RPAREN

    RPAREN  shift, and go to state 109

    $default  reduce using rule 24 (expr)


state 62

   38 arithmetic_expr: binary_expr .
   43 binary_expr: binary_expr . PLUS term
   44            | binary_expr . MINUS term
   52 para: LPAREN binary_expr . RPAREN

    RPAREN  shift, and go to state 110
    MINUS   shift, and go to state 92
    PLUS    shift, and go to state 93

    $default  reduce using rule 38 (arithmetic_expr)


state 63

   16 stmt: BREAK SEMICOLON .

    $default  reduce using rule 16 (stmt)


state 64

   17 stmt: CONTINUE SEMICOLON .

    $default  reduce using rule 17 (stmt)


state 65

   79 while_stmt: WHILE LPAREN . expr $@3 RPAREN LBRACE $@4 stmts RBRACE

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    expr             go to state 111
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 66

   92 for_stmt: FOR $@12 . for_expression_stmt

    LPAREN  shift, and go to state 112

    for_expression_stmt  go to state 113


state 67

   98 switch_stmt: SWITCH LPAREN . expr RPAREN LBRACE $@15 case_stmts RBRACE

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    expr             go to state 114
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 68

   83 if_stmt: IF LPAREN . expr $@5 RPAREN LBRACE $@6 stmts RBRACE $@7 if_expression_stmt

    IDENTIFIER  shift, and go to state 59
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    TRUE_VAL    shift, and go to state 9
    FALSE_VAL   shift, and go to state 10
    LPAREN      shift, and go to state 13
    MINUS       shift, and go to state 21
    NOT         shift, and go to state 22

    expr             go to state 115
    bool_expr        go to state 29
    arithmetic_expr  go to state 30
    unary_expr       go to state 31
    binary_expr      go to state 32
    term             go to state 33
    negat            go to state 34
    para             go to state 35
    factor           go to state 36
    function_call    go to state 37


state 69

   90 repeat_until_stmt: REPEAT LBRACE . $@9 stmts RBRACE $@10 UNTIL LPAREN expr $@11 RPAREN SEMICOLON

    $default  reduce using rule 87 ($@9)

    $@9  go to state 116


state 70

   57 factor: IDENTIFIER .
   58 function_call: IDENTIFIER . LPAREN RPAREN
   60              | IDENTIFIER . LPAREN $@2 call_params RPAREN

    LPAREN  shift, and go to state 49

    $default  reduce using rule 57 (factor)


state 71

   52 para: LPAREN . binary_expr RPAREN

    IDENTIFIER  shift, and go to state 70
    INT_VAL     shift, and go to state 7
    FLOAT_VAL   shift, and go to state 8
    LPAREN      shift, and go to state 71
    MINUS       shift, and go to state 21
